Remove unused files, update color and emoji selectors, and fix some issues in the new profile component

--- a/Sparc2/Sparc2/Profile/Avatar/EmojiSelector.razor.scss
+++ b/Sparc2/Sparc2/Profile/Avatar/EmojiSelector.razor.scss
@@ -12,9 +12,8 @@
     }
 
     .emoji-container {
-        flex: 1;
-        min-height: 162px;
-        max-height: 172px;
+        flex: 1;        
+        max-height: 206px;
         overflow-y: auto;
         border: 1px solid var(--purple-100);
         border-radius: 8px;
@@ -26,13 +25,15 @@
     font-family: 'Noto Emoji', sans-serif;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
     gap: 6px;
-    /*padding: 0 6px 0 18px;*/
 
     li {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 32px;
         height: 32px;
-        /*padding: 6px;*/
         font-size: 28px;
         border-radius: 8px;
         cursor: pointer;
