--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -14,6 +14,7 @@
 @using Sparc2.Donations
 @using Sparc2.Ideas
 @using Sparc2.Profile
+@using Sparc2.Profile.Avatar
 @using Sparc2.Products
 @using Sparc2.Catalog.Purchase
 @using Sparc.Blossom.Api
