--- a/Sparc2/Sparc2/Profile/NewUserProfile.razor.scss
+++ b/Sparc2/Sparc2/Profile/NewUserProfile.razor.scss
@@ -97,6 +97,10 @@
                         line-height: 140%;
                         color: rgba(43, 28, 69, 0.90);
                     }
+
+                    ::deep svg {
+                        align-self: center;
+                    }
                 }
 
                 > div {
