Update user apps section and disable background scrolling when profile box is open

--- a/Sparc2/Sparc2/Profile/NewUserProfile.razor
+++ b/Sparc2/Sparc2/Profile/NewUserProfile.razor
@@ -55,7 +55,7 @@
                         </header>
                         <div>
                             <button type="button" class="primary-btn">Continue with Passkey</button>
-                        </div>                        
+                        </div>
                     </section>
                 }
                 else if (RegisteringPasskey)
@@ -78,8 +78,16 @@
                         <p>Select app images to go to app page or store page</p>
                     </header>
                     <div>
-                        <img src="/images/LogoMosaic.png" alt="App 1" />
-                        <img src="/images/background-noise.png" alt="App 2" />
+                        <article>
+                            <a href="">
+                                <SparcApp />
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <TimbiiApp />
+                            </a>
+                        </article>
                     </div>
                 </section>
 
