--- a/Sparc2/Sparc2/Profile/NewUserProfile.razor.css
+++ b/Sparc2/Sparc2/Profile/NewUserProfile.razor.css
@@ -106,10 +106,6 @@ article section .column > section > div textarea {
   padding: 1.4rem 2rem 29.7rem 2rem;
   resize: none;
 }
-article section .column > section > div img {
-  width: 51.2px;
-  height: 51.2px;
-}
 article section .column > section > div label {
   display: flex;
   flex-direction: column;
@@ -175,6 +171,27 @@ article section .column > section.app-links > div {
   align-content: flex-start;
   align-self: stretch;
   flex-wrap: wrap;
+}
+article section .column > section.app-links > div > article {
+  all: unset;
+  display: flex;
+  width: 51.2px;
+  height: 51.2px;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  overflow: hidden;
+}
+article section .column > section.app-links > div > article ::deep svg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+article section .column > section.app-links > div > article:hover {
+  border: 1px solid var(--purple-800);
 }
 article section .column > section.profile-customization > header {
   gap: 0.4rem;
