Refactor new profile SCSS, uncomment real inputs in user details, and begin responsiveness adjustments

--- a/Sparc2/Sparc2/Profile/Avatar/ColorSelector.razor.scss
+++ b/Sparc2/Sparc2/Profile/Avatar/ColorSelector.razor.scss
@@ -42,4 +42,8 @@ ul.colors {
     }
 }
 
-
+@media (min-height: 633px) and (max-height: 810px) {
+    .color-selector {
+        gap: 4px;
+    }
+}
