--- a/Sparc2/Sparc2/Profile/Avatar/ColorSelector.razor.css
+++ b/Sparc2/Sparc2/Profile/Avatar/ColorSelector.razor.css
@@ -37,3 +37,9 @@ ul.colors li span {
   height: 100%;
   border-radius: 50%;
 }
+
+@media (min-height: 633px) and (max-height: 810px) {
+  .color-selector {
+    gap: 4px;
+  }
+}
