--- a/Sparc2/Sparc2/Profile/Avatar/EmojiSelector.razor.css
+++ b/Sparc2/Sparc2/Profile/Avatar/EmojiSelector.razor.css
@@ -12,7 +12,7 @@
 }
 .emoji-selector .emoji-container {
   flex: 1;
-  max-height: 206px;
+  /*max-height: 318px;*/
   overflow-y: auto;
   border: 1px solid var(--purple-100);
   border-radius: 8px;
@@ -43,4 +43,16 @@
 .skintones li.selected, .emojis li.selected {
   background: var(--purple-900);
   color: white;
+}
+
+@media (min-height: 633px) and (max-height: 810px) {
+  .emoji-selector .emoji-container {
+    max-height: 122px;
+    gap: 4px;
+  }
+}
+@media (min-height: 810px) {
+  .emoji-selector .emoji-container {
+    max-height: 170px;
+  }
 }
