--- a/Sparc2/Sparc2/Profile/Avatar/EmojiSelector.razor.scss
+++ b/Sparc2/Sparc2/Profile/Avatar/EmojiSelector.razor.scss
@@ -12,8 +12,8 @@
     }
 
     .emoji-container {
-        flex: 1;        
-        max-height: 206px;
+        flex: 1;
+        /*max-height: 318px;*/        
         overflow-y: auto;
         border: 1px solid var(--purple-100);
         border-radius: 8px;
@@ -46,6 +46,23 @@
         &.selected {
             background: var(--purple-900);
             color: white;
+        }
+    }
+}
+
+@media (min-height: 633px) and (max-height: 810px) {
+    .emoji-selector {
+        .emoji-container {
+            max-height: 122px;
+            gap: 4px;
+        }
+    }
+}
+
+@media (min-height: 810px) {
+    .emoji-selector {
+        .emoji-container {
+            max-height: 170px;
         }
     }
 }
