--- a/Sparc2/Sparc2/Profile/NewUserProfile.razor
+++ b/Sparc2/Sparc2/Profile/NewUserProfile.razor
@@ -88,6 +88,26 @@
                                 <TimbiiApp />
                             </a>
                         </article>
+                        <article>
+                            <a href="">
+                                <SparcApp />
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <TimbiiApp />
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <SparcApp />
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <TimbiiApp />
+                            </a>
+                        </article>
                     </div>
                 </section>
 
@@ -130,22 +150,19 @@
                     <div class="account-details">
                         <label>
                             Name
-                            @* <input @bind="UserAvatar.Username" @bind:event="oninput" placeholder="Your Name" @onblur=Save /> *@
-                            <input type="text" placeholder="Your Name" />
+                            <input @bind="UserAvatar.Username" @bind:event="oninput" placeholder="Your Name" @onblur=Save />                            
                         </label>
                         <label>
                             Pronouns (Optional)
-                            @* <input @bind="UserAvatar.Pronouns" @bind:event="oninput" placeholder="She/her, He/him, They/them" @onblur=Save /> *@
-                            <input type="text" placeholder="She/her, He/him, They/them" />
+                            <input @bind="UserAvatar.Pronouns" @bind:event="oninput" placeholder="She/her, He/him, They/them" @onblur=Save />                          
                         </label>
 
                         <label>
                             About You (Optional)
-                            @* <textarea @bind="UserAvatar.Description"
+                            <textarea @bind="UserAvatar.Description"
                               @bind:event="oninput"
                               @onblur=Save
-                              placeholder="Enter a little about yourself" /> *@
-                            <textarea placeholder="Enter a little about yourself" />
+                              placeholder="Enter a little about yourself" />                           
                         </label>
                     </div>
                 </section>
@@ -182,8 +199,6 @@
     {
         var user = await SparcEngine.UserInfo();
         UserAvatar = user?.Avatar;
-
-        Console.WriteLine($"DEBUG: UserAvatar {(UserAvatar == null ? "is NULL" : "is OK")}");
 
         if (UserAvatar == null)
             return;
